--- a/index.html
+++ b/index.html
@@ -30,8 +30,18 @@
     </header>
     <div class="container">
       <!-- Timeblocks go here -->
-      <div class="task">
-        
+      <div class="card" style="width: 100%;">
+        <ul class="list-group list-group-flush">
+          <ul class="list-group-item">9 AM</ul>
+          <ul class="list-group-item">10 AM</ul>
+          <ul class="list-group-item">11 AM</ul>
+          <ul class="list-group-item">12 PM</ul>
+          <ul class="list-group-item">1 PM</ul>
+          <ul class="list-group-item">2 PM</ul>
+          <ul class="list-group-item">3 PM</ul>
+          <ul class="list-group-item">4 PM</ul>
+          <ul class="list-group-item">5 PM</ul>
+        </ul>
       </div>
     </div>
 
