--- a/index.html
+++ b/index.html
@@ -28,21 +28,56 @@
       <p class="lead">A simple calendar app for scheduling your work day</p>
       <p id="currentDay" class="lead"></p>
     </header>
+    
     <div class="container">
       <!-- Timeblocks go here -->
-      <div class="card" style="width: 100%;">
-        <ul class="list-group list-group-flush">
-          <ul class="list-group-item">9 AM</ul>
-          <ul class="list-group-item">10 AM</ul>
-          <ul class="list-group-item">11 AM</ul>
-          <ul class="list-group-item">12 PM</ul>
-          <ul class="list-group-item">1 PM</ul>
-          <ul class="list-group-item">2 PM</ul>
-          <ul class="list-group-item">3 PM</ul>
-          <ul class="list-group-item">4 PM</ul>
-          <ul class="list-group-item">5 PM</ul>
-        </ul>
-      </div>
+      <ul class="time-block">
+        <ul class="list-group list-group-horizontal-sm">
+            <li class="list-group-item" style="width: 95px;">9 AM</li>
+            <li class="list-group-item" style="width: 1000px;"></li>
+            <li class="list-group-item" style="width: 90px;"></li>
+          </ul>
+          <ul class="list-group list-group-horizontal-sm">
+            <li class="list-group-item" style="width: 95px;">10 AM</li>
+            <li class="list-group-item" style="width: 1000px;"></li>
+            <li class="list-group-item" style="width: 90px;"></li>
+          </ul>
+          <ul class="list-group list-group-horizontal-sm">
+            <li class="list-group-item" style="width: 95px;">11 AM</li>
+            <li class="list-group-item" style="width: 1000px;"></li>
+            <li class="list-group-item" style="width: 90px;"></li>
+          </ul>
+          <ul class="list-group list-group-horizontal-sm">
+            <li class="list-group-item" style="width: 95px;">12 PM</li>
+            <li class="list-group-item" style="width: 1000px;"></li>
+            <li class="list-group-item" style="width: 90px;"></li>
+          </ul>
+          <ul class="list-group list-group-horizontal-sm">
+            <li class="list-group-item" style="width: 95px;">1 PM</li>
+            <li class="list-group-item" style="width: 1000px;"></li>
+            <li class="list-group-item" style="width: 90px;"></li>
+          </ul>
+          <ul class="list-group list-group-horizontal-sm">
+            <li class="list-group-item" style="width: 95px;">2 PM</li>
+            <li class="list-group-item" style="width: 1000px;"></li>
+            <li class="list-group-item" style="width: 90px;"></li>
+          </ul>
+          <ul class="list-group list-group-horizontal-sm">
+            <li class="list-group-item" style="width: 95px;">3 PM</li>
+            <li class="list-group-item" style="width: 1000px;"></li>
+            <li class="list-group-item" style="width: 90px;"></li>
+          </ul>
+          <ul class="list-group list-group-horizontal-sm">
+            <li class="list-group-item" style="width: 95px;">4 PM</li>
+            <li class="list-group-item" style="width: 1000px;"></li>
+            <li class="list-group-item" style="width: 90px;"></li>
+          </ul>
+          <ul class="list-group list-group-horizontal-sm">
+            <li class="list-group-item" style="width: 95px;">5 PM</li>
+            <li class="list-group-item" style="width: 1000px;"></li>
+            <li class="list-group-item" style="width: 90px;"></li>
+          </ul>
+      </ul>
     </div>
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
