add tasks to schedule

--- a/index.html
+++ b/index.html
@@ -34,47 +34,47 @@
       <ul class="time-block">
         <ul class="list-group list-group-horizontal-sm">
             <li class="list-group-item" style="width: 95px;">9 AM</li>
-            <li class="list-group-item" style="width: 1000px;"></li>
+            <li class="list-group-item" style="width: 1000px;"><input type="text" class="task-info"></li>
             <li class="list-group-item" style="width: 90px;"></li>
           </ul>
           <ul class="list-group list-group-horizontal-sm">
             <li class="list-group-item" style="width: 95px;">10 AM</li>
-            <li class="list-group-item" style="width: 1000px;"></li>
+            <li class="list-group-item" style="width: 1000px;"><input type="text" class="task-info"></li>
             <li class="list-group-item" style="width: 90px;"></li>
           </ul>
           <ul class="list-group list-group-horizontal-sm">
             <li class="list-group-item" style="width: 95px;">11 AM</li>
-            <li class="list-group-item" style="width: 1000px;"></li>
+            <li class="list-group-item" style="width: 1000px;"><input type="text" class="task-info"></li>
             <li class="list-group-item" style="width: 90px;"></li>
           </ul>
           <ul class="list-group list-group-horizontal-sm">
             <li class="list-group-item" style="width: 95px;">12 PM</li>
-            <li class="list-group-item" style="width: 1000px;"></li>
+            <li class="list-group-item" style="width: 1000px;"><input type="text" class="task-info"></li>
             <li class="list-group-item" style="width: 90px;"></li>
           </ul>
           <ul class="list-group list-group-horizontal-sm">
             <li class="list-group-item" style="width: 95px;">1 PM</li>
-            <li class="list-group-item" style="width: 1000px;"></li>
+            <li class="list-group-item" style="width: 1000px;"><input type="text" class="task-info"></li>
             <li class="list-group-item" style="width: 90px;"></li>
           </ul>
           <ul class="list-group list-group-horizontal-sm">
             <li class="list-group-item" style="width: 95px;">2 PM</li>
-            <li class="list-group-item" style="width: 1000px;"></li>
+            <li class="list-group-item" style="width: 1000px;"><input type="text" class="task-info"></li>
             <li class="list-group-item" style="width: 90px;"></li>
           </ul>
           <ul class="list-group list-group-horizontal-sm">
             <li class="list-group-item" style="width: 95px;">3 PM</li>
-            <li class="list-group-item" style="width: 1000px;"></li>
+            <li class="list-group-item" style="width: 1000px;"><input type="text" class="task-info"></li>
             <li class="list-group-item" style="width: 90px;"></li>
           </ul>
           <ul class="list-group list-group-horizontal-sm">
             <li class="list-group-item" style="width: 95px;">4 PM</li>
-            <li class="list-group-item" style="width: 1000px;"></li>
+            <li class="list-group-item" style="width: 1000px;"><input type="text" class="task-info"></li>
             <li class="list-group-item" style="width: 90px;"></li>
           </ul>
           <ul class="list-group list-group-horizontal-sm">
             <li class="list-group-item" style="width: 95px;">5 PM</li>
-            <li class="list-group-item" style="width: 1000px;"></li>
+            <li class="list-group-item" style="width: 1000px;"><input type="text" class="task-info"></li>
             <li class="list-group-item" style="width: 90px;"></li>
           </ul>
       </ul>
