--- a/index.html
+++ b/index.html
@@ -34,48 +34,48 @@
       <ul class="time-block">
         <ul class="list-group list-group-horizontal-sm">
             <li class="list-group-item" style="width: 95px;">9 AM</li>
-            <li class="list-group-item" style="width: 1000px;"><input type="text" class="task-info"></li>
-            <li class="list-group-item" style="width: 90px;"></li>
+            <li id="9am" class="list-group-item" style="width: 1000px;"><input type="text" class="task-info"></li>
+            <li class="list-group-item" style="width: 90px;"><button onclick="saveData()">Save</button></li>
           </ul>
           <ul class="list-group list-group-horizontal-sm">
             <li class="list-group-item" style="width: 95px;">10 AM</li>
-            <li class="list-group-item" style="width: 1000px;"><input type="text" class="task-info"></li>
-            <li class="list-group-item" style="width: 90px;"></li>
+            <li id="10am" class="list-group-item" style="width: 1000px;"><input type="text" class="task-info"></li>
+            <li class="list-group-item" style="width: 90px;"><button onclick="saveData()">Save</button></li>
           </ul>
           <ul class="list-group list-group-horizontal-sm">
             <li class="list-group-item" style="width: 95px;">11 AM</li>
-            <li class="list-group-item" style="width: 1000px;"><input type="text" class="task-info"></li>
-            <li class="list-group-item" style="width: 90px;"></li>
+            <li id="11am" class="list-group-item" style="width: 1000px;"><input type="text" class="task-info"></li>
+            <li class="list-group-item" style="width: 90px;"><button onclick="saveData()">Save</button></li>
           </ul>
           <ul class="list-group list-group-horizontal-sm">
             <li class="list-group-item" style="width: 95px;">12 PM</li>
-            <li class="list-group-item" style="width: 1000px;"><input type="text" class="task-info"></li>
-            <li class="list-group-item" style="width: 90px;"></li>
+            <li id="12pm" class="list-group-item" style="width: 1000px;"><input type="text" class="task-info"></li>
+            <li class="list-group-item" style="width: 90px;"><button onclick="saveData()">Save</button></li>
           </ul>
           <ul class="list-group list-group-horizontal-sm">
             <li class="list-group-item" style="width: 95px;">1 PM</li>
-            <li class="list-group-item" style="width: 1000px;"><input type="text" class="task-info"></li>
-            <li class="list-group-item" style="width: 90px;"></li>
+            <li id="1pm" class="list-group-item" style="width: 1000px;"><input type="text" class="task-info"></li>
+            <li class="list-group-item" style="width: 90px;"><button onclick="saveData()">Save</button></li>
           </ul>
           <ul class="list-group list-group-horizontal-sm">
             <li class="list-group-item" style="width: 95px;">2 PM</li>
-            <li class="list-group-item" style="width: 1000px;"><input type="text" class="task-info"></li>
-            <li class="list-group-item" style="width: 90px;"></li>
+            <li id="2pm" class="list-group-item" style="width: 1000px;"><input type="text" class="task-info"></li>
+            <li class="list-group-item" style="width: 90px;"><button onclick="saveData()">Save</button></li>
           </ul>
           <ul class="list-group list-group-horizontal-sm">
             <li class="list-group-item" style="width: 95px;">3 PM</li>
-            <li class="list-group-item" style="width: 1000px;"><input type="text" class="task-info"></li>
-            <li class="list-group-item" style="width: 90px;"></li>
+            <li id="3pm" class="list-group-item" style="width: 1000px;"><input type="text" class="task-info"></li>
+            <li class="list-group-item" style="width: 90px;"><button onclick="saveData()">Save</button></li>
           </ul>
           <ul class="list-group list-group-horizontal-sm">
             <li class="list-group-item" style="width: 95px;">4 PM</li>
-            <li class="list-group-item" style="width: 1000px;"><input type="text" class="task-info"></li>
-            <li class="list-group-item" style="width: 90px;"></li>
+            <li id="4pm" class="list-group-item" style="width: 1000px;"><input type="text" class="task-info"></li>
+            <li class="list-group-item" style="width: 90px;"><button onclick="saveData()">Save</button></li>
           </ul>
           <ul class="list-group list-group-horizontal-sm">
             <li class="list-group-item" style="width: 95px;">5 PM</li>
-            <li class="list-group-item" style="width: 1000px;"><input type="text" class="task-info"></li>
-            <li class="list-group-item" style="width: 90px;"></li>
+            <li id="5pm" class="list-group-item" style="width: 1000px;"><input type="text" class="task-info"></li>
+            <li class="list-group-item" style="width: 90px;"><button onclick="saveData()">Save</button></li>
           </ul>
       </ul>
     </div>
